--- a/applications/luci-app-ttyd/po/de/ttyd.po
+++ b/applications/luci-app-ttyd/po/de/ttyd.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2022-06-05 12:16+0000\n"
+"PO-Revision-Date: 2022-08-30 18:53+0000\n"
 "Last-Translator: ssantos <ssantos@web.de>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsttyd/de/>\n"
@@ -8,7 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.13-dev\n"
+"X-Generator: Weblate 4.14.1-dev\n"
 
 #: applications/luci-app-ttyd/htdocs/luci-static/resources/view/ttyd/config.js:56
 msgid "Accept only one client and exit on disconnection"
@@ -27,8 +27,8 @@ msgid ""
 "Allow client to send command line arguments in URL (eg: http://"
 "localhost:7681?arg=foo&arg=bar)"
 msgstr ""
-"Clients erlauben, Parameter in der URL mitzugeben (z.B.: http://"
-"localhost:7681?arg=foo&arg=bar)"
+"Clients erlauben, Parameter in der URL mitzugeben (z.B.: "
+"http://localhost:7681?arg=foo&arg=bar)"
 
 #: applications/luci-app-ttyd/htdocs/luci-static/resources/view/ttyd/config.js:50
 msgid "Check origin"
@@ -95,9 +95,8 @@ msgid "Group ID"
 msgstr "Gruppen ID"
 
 #: applications/luci-app-ttyd/htdocs/luci-static/resources/view/ttyd/config.js:34
-#, fuzzy
 msgid "Group id to run with"
-msgstr "Zu verwendende Gruppen-ID"
+msgstr "Gruppen-ID, mit der ausgeführt werden soll"
 
 #: applications/luci-app-ttyd/htdocs/luci-static/resources/view/ttyd/config.js:60
 msgid "IPv6"
@@ -128,8 +127,8 @@ msgid ""
 "Network interface to bind (eg: eth0), or UNIX domain socket path (eg: /var/"
 "run/ttyd.sock)"
 msgstr ""
-"Zu bindende Netzwerkschnittstelle (z. B. eth0) oder UNIX-Domain-Socket-Pfad "
-"(z. B. /var/run/ttyd.sock)"
+"Zu bindende Netzwerkschnittstelle (z. B. eth0) oder UNIX-Domain-Socket-Pfad ("
+"z. B. /var/run/ttyd.sock)"
 
 #: applications/luci-app-ttyd/htdocs/luci-static/resources/view/ttyd/config.js:76
 msgid "Notice"
@@ -233,3 +232,6 @@ msgstr "Warnung"
 #: applications/luci-app-ttyd/htdocs/luci-static/resources/view/ttyd/config.js:12
 msgid "ttyd Instance"
 msgstr "ttyd Instanz"
+
+#~ msgid "ttyd"
+#~ msgstr "ttyd"
